Fix home project spacing

--- a/css/home.css
+++ b/css/home.css
@@ -85,7 +85,7 @@
 }
 
 .home section.projects .project .hover h2 {
-	height: 200px;
+	height: 190px;
 	font-family: "Calendas";
 	background: rgb(0, 0, 0);
 	color: rgb(255, 255, 255);
